--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <br>Correo Institucional: oddesalvadorp@unadvirtual.edu.co
     <br>Corre personal: oscardesalvadorp@gmail.com
     <br>Skype: erensekai
-    <BR>Cel. 3196632782</BR>
+    <br>Cel. 3196632782
 </body>
 </html>
