--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>14 de Junio de 2022</h3>
     <p>Datos de contacto:</p>
     <br>Correo Institucional: oddesalvadorp@unadvirtual.edu.co
-    <br>Corre personal: oscardesalvadorp@gmail.com
+    <br>Correo personal: oscardesalvadorp@gmail.com
     <br>Skype: erensekai
 </body>
 </html>
