--- a/Fase2/design.html
+++ b/Fase2/design.html
@@ -10,8 +10,16 @@
     <header><h1>Etiquetas Básicas de HTML,
         atributos y valores</h1></header>
     <NAV>MENU</NAV>
-    <UL>MENU</UL>
-    <LI>MENU</LI>
+    <UL>
+        <li>Inicio</li>
+        <li>Temas</li><li>Tema 1</li>
+        <li>Recursos Digitales</li>
+        <li>Aprendizaje</li>
+        <li>Acerca de </li>
+    </UL>
+    <section>Propósito del sitio</section>
+    <article>redactar un primer borrador con los contenidos que se publicarán en el sitio web</article>
+    <footer>correo y skype</footer>
     
 </body>
 </html>
