--- a/Fase2/design.html
+++ b/Fase2/design.html
@@ -7,12 +7,13 @@
     <title>Design</title>
 </head>
 <body>
-    <header><h1>Etiquetas Básicas de HTML,
-        atributos y valores</h1></header>
-    <NAV>MENU</NAV>
+    <header>
+        <h1>Etiquetas Básicas de HTML, atributos y valores</h1>
+    </header>
+    <NAV>MENÚ</NAV>
     <UL>
         <li>Inicio</li>
-        <li>Temas</li><li>Tema 1</li>
+        <li>Temas</li><UL><li>Tema 1</li><li>Tema 2</li></UL>
         <li>Recursos Digitales</li>
         <li>Aprendizaje</li>
         <li>Acerca de </li>
