--- a/Fase2/design.html
+++ b/Fase2/design.html
@@ -7,20 +7,82 @@
     <title>Design</title>
 </head>
 <body>
-    <header>
-        <h1>Etiquetas Básicas de HTML, atributos y valores</h1>
-    </header>
-    <NAV>MENÚ</NAV>
-    <UL>
-        <li>Inicio</li>
-        <li>Temas</li><UL><li>Tema 1</li><li>Tema 2</li></UL>
-        <li>Recursos Digitales</li>
-        <li>Aprendizaje</li>
-        <li>Acerca de </li>
-    </UL>
-    <section>Propósito del sitio</section>
-    <article>redactar un primer borrador con los contenidos que se publicarán en el sitio web</article>
-    <footer>correo y skype</footer>
+    <header>Etiquetas Básicas de HTML, Atributos y Valores</header>
+    <nav>
+        <ul class="menu">
+            <li>
+                <h3> <a href="index.html"></a>Inicio</h3>
+            </li>
+            <li>
+                <h3>Temas</h3>
+                <ul>
+                    <li><a href="tema1.html">¿Qué es una etiqueta HTML?</a> 
+                    </li>
+
+                    <li>¿Cómo funcionan las etiquetas HTML?
+                    </li>
+
+                    <li>¿Cuáles son las etiquetas HTML básicas?
+                    </li>
+
+                </ul>
+            </li>
+            <li>
+                <h3>Recursos Digitales</h3>
+                <ul>
+                    <li><a href="tema2.html">Etiquetas y atributos en HTML</a></li>
+
+                    <li>
+                        Etiquetas básicas de HTML, valores y atributos
+                    </li>
+
+                </ul>
+            </li>
+            <li>
+                <h3>Evaluaciones</h3>
+                <ul>
+                    <li><a href="evaluacion1.html">Evaluacion 1</a></li>
+
+                    <li>
+                        <a href="evaluacion2.html">Evaluacion 2</a></li>
+                    </li>
+
+                </ul>
+            </li>
+            <li>
+                <h3>Acerca de</h3>
+
+            </li>
+        </ul>
+    </nav>
+    <section>
+        <article>
+            <h3>Propósito del Sitio</h3>
+            <p>
+                El propósito de este sitio es divulgar información acerca de las caracteristicas de las etiquetas
+                básicas de
+                HTML, sus atributos y valores y la forma de implementarlas en un documento HTML
+            </p>
+
+        </article>
+        <aside>
+            <h4>Contenidos que se van a publicar en el Sitio</h4>
+            <P>En esta página podremos ver todo lo relacionado a los temas de etiquetas básicas de HTML, atributos y
+                valores
+                que poco a poco iremos estructurando de manera más relevante</P>
+
+            <img src="img/ElementoHTML.JPG" width="600" height="200" alt="Conceptos Básicos de HTML">
+
+        </aside>
+    </section>
+    <footer>
+        <p><b>Skype:</b>
+            erensekai</p>
+        <p><b>Correo:</b>
+            oddesalvadorp@unadvirtual.edu.co</p>
+        <p><b>Fecha de Actualización:</b>
+            25/06/2022</p>
+    </footer>
     
 </body>
 </html>
