--- a/Fase2/design.html
+++ b/Fase2/design.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design</title>
 </head>
-<body>
+<body>{background-color: greenyellow;}
     <header>
+        
         <H1>Diseño de sitios web: Etiquetas Básicas de HTML, Atributos y Valores</H1>
         </header>
         <hr>
