--- a/Fase2/design.html
+++ b/Fase2/design.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design</title>
 </head>
-<body>{background-color: greenyellow;}
+<body>
     <header>
-        
         <H1>Diseño de sitios web: Etiquetas Básicas de HTML, Atributos y Valores</H1>
         </header>
         <hr>
@@ -30,7 +29,7 @@
                     <li>Aprendizaje 1</li>
                     <li>Aprendizaje 2</li>
                 </ul>
-                <li>Acerca de: Martha Isabel Bedoya Castaño</li>
+                <li>Acerca <de:ul>Autor: Oscar David de Salvador Peña</de:ul> </li>
             </ul> 
             <nav>
         <hr>
