--- a/Fase2/design.html
+++ b/Fase2/design.html
@@ -29,7 +29,8 @@
                     <li>Aprendizaje 1</li>
                     <li>Aprendizaje 2</li>
                 </ul>
-                <li>Acerca <de:ul>Autor: Oscar David de Salvador Peña</de:ul> </li>
+                <li>Acerca de:
+                    <ul><li>Autor: Oscar David de Salvador Peña</li></ul>
             </ul> 
             <nav>
         <hr>
