--- a/Fase2/design.html
+++ b/Fase2/design.html
@@ -16,8 +16,8 @@
                 <li>Incio</li>
                 <li>Temas</li>
                 <ul>
-                    <li>Tema 1</li>
-                    <li>Tema 2</li>
+                    <li>Tema 1: H2 Etiqueta Básica de HTML</li>
+                    <li>Tema 2: Atributos y Valores</li>
                 </ul>
                 <li>Recursos Digitales</li>
                 <ul>
@@ -30,11 +30,12 @@
                     <li>Aprendizaje 2</li>
                 </ul>
                 <li>Acerca de:
-                    <ul><li>Autor: Oscar David de Salvador Peña</li></ul>
+                    <ul>
+                        <li>Autor: Oscar David de Salvador Peña</li>
+                    </ul>
             </ul> 
             <nav>
         <hr>
-        <!-- contenido principal de la pagina  -->
         <main>
             <section>
     
