--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
     <br>Correo Institucional: oddesalvadorp@unadvirtual.edu.co
     <br>Correo personal: oscardesalvadorp@gmail.com
     <br>Skype: erensekai
+    <br>
+
+    <a href="Fase2/design.html"> Fase 2
+    
+    </a>
 </body>
 </html>
