Construccion de la Fase 2

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <br>Correo personal: oscardesalvadorp@gmail.com
     <br>Skype: erensekai
     <br>
+    <br>
 
-    <a href="Fase2/design.html"> Fase 2
-    
-    </a>
+    <h1><a href="Fase2/design.html"> FASE 2
+    </a></h1>
 </body>
 </html>
