--- a/Fase2/design.html
+++ b/Fase2/design.html
@@ -104,8 +104,9 @@
                             <p>Toma de platzi.com</p>
                         </p>
                     </article>
+                    <br>
                     <article>
-                        <h2>Aprendizaje</h2>
+                        <h2>Aprendizaje 1</h2>
                         <p>Dentro de los siguientes enlaces encontraras videos referente a HTML seguido de algunos videos de aprendizaje e informacio.
                             <h5>Aprendizaje: Aprende HTML ahora! curso completo GRATIS desde cero </h5>
                             <a href="https://youtu.be/MJkdaVFHrto">Aprende HTML</a>
