--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
 
     <h1><a href="Fase2/design.html"> FASE 2
     </a></h1>
+    <h1><a href="Fase3/index.html"> FASE 3
+    </a></h1>
 </body>
 </html>
