--- a/Fase3/acercade.html
+++ b/Fase3/acercade.html
@@ -66,7 +66,7 @@
                         <h5>Ingeniería de Sistemas</h5>
                         <br>
             
-                        <h5>Universidad Nacional Abierta Y A Distancia UNAD - ECBTI - 2022 - 8-03</h5>
+                        <h5>Universidad Nacional Abierta Y A Distancia UNAD</h5>
                         <br>
 
                         <h5>ECBTI - 2022 - 8-03</h5>
