--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Proyecto de sitio Web 2022 -8-03</h1>
     <h3>Nombre: Oscar David de Salvador Peña</h3>
     <h3>Programa: Ingenieria de Sistemas</h3>
+    <H3>Universidad Nacional Abierta Y A Distancia (UNAD)</H3>
     <h3>14 de Junio de 2022</h3>
     <p>Datos de contacto:</p>
     <br>Correo Institucional: oddesalvadorp@unadvirtual.edu.co
